fix(tooltip): use contrast function to determine text color based on background

--- a/packages/bootstrap/scss/tooltip/_theme.scss
+++ b/packages/bootstrap/scss/tooltip/_theme.scss
@@ -1,13 +1,8 @@
-$is-light: lightness($bg-color) > 50;
-
-$resolved-tooltip-text: if($is-light, $tooltip-color, $tooltip-bg);
-$resolved-tooltip-bg: if($is-light, $tooltip-bg, $tooltip-color);
-
 @include exports("tooltip/theme") {
 
     .k-tooltip {
-        color: $resolved-tooltip-text;
-        background-color: $resolved-tooltip-bg;
+        color: contrast-wcag($tooltip-bg);
+        background-color: $tooltip-bg;
         @include border-radius($border-radius);
     }
 
@@ -16,9 +11,9 @@ $resolved-tooltip-bg: if($is-light, $tooltip-bg, $tooltip-color);
     }
 
 
-    .k-callout-n { border-bottom-color: $resolved-tooltip-bg; }
-    .k-callout-e { border-left-color: $resolved-tooltip-bg; }
-    .k-callout-s { border-top-color: $resolved-tooltip-bg; }
-    .k-callout-w { border-right-color: $resolved-tooltip-bg; }
+    .k-callout-n { border-bottom-color: $tooltip-bg; }
+    .k-callout-e { border-left-color: $tooltip-bg; }
+    .k-callout-s { border-top-color: $tooltip-bg; }
+    .k-callout-w { border-right-color: $tooltip-bg; }
 
 }
